use https for thecrewchief.org links

--- a/HelpFiles/About_Contact.html
+++ b/HelpFiles/About_Contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -12,8 +12,8 @@
   <body link="#0000EE" vlink="#551A8B" text="#000000" bgcolor="#dddddd" alink="#EE0000">
 <div style="font-family:'Lucida Sans Unicode';font-size:13px;" class="main">
 <br>
-&nbsp;<a href="http://thecrewchief.org/forum.php">Crew Chief Forum</a><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://thecrewchief.org/showthread.php?28-F-a-q">FAQ</a><br>
+&nbsp;<a href="https://thecrewchief.org/forum.php">Crew Chief Forum</a><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://thecrewchief.org/showthread.php?28-F-a-q">FAQ</a><br>
 <br>
 &nbsp;<a href="https://discord.com/channels/322071247032942592/406527523455893504">Discord channel</a><br>
 <br>
