--- a/HelpFiles/GameSpecific_CommandLineSwitches.html
+++ b/HelpFiles/GameSpecific_CommandLineSwitches.html
@@ -60,7 +60,7 @@
           <code>-skip_updates</code> - disables the check for CC updates.
           <br>
           <br>
-          <code>-debug</code> - collects CC debug trace.  For more info see <a href="http://thecrewchief.org/showthread.php?142-How-to-collect-Crew-Chief-repro-traces">here</a>
+          <code>-debug</code> - collects CC debug trace.  For more info see <a href="https://thecrewchief.org/showthread.php?142-How-to-collect-Crew-Chief-repro-traces">here</a>
           <br>
       </div>
 
