--- a/HelpFiles/GettingStarted_GameSpecific_GTR2.html
+++ b/HelpFiles/GettingStarted_GameSpecific_GTR2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -16,7 +16,7 @@
       See this post on the forum:
       <br>
       <a
-href="http://thecrewchief.org/showthread.php?2012-GTR2-Setup-Instructions-and-Known-Issues">http://thecrewchief.org/showthread.php?2012-GTR2-Setup-Instructions-and-Known-Issues</a><br>
+href="https://thecrewchief.org/showthread.php?2012-GTR2-Setup-Instructions-and-Known-Issues">https://thecrewchief.org/showthread.php?2012-GTR2-Setup-Instructions-and-Known-Issues</a><br>
       <br>
       If you have a DVD version of GTR 2 you <i>may </i>be able to use
       the CD key to register the Steam version.<br>
