--- a/HelpFiles/GettingStarted_GameSpecific_RichardBurnsRally.html
+++ b/HelpFiles/GettingStarted_GameSpecific_RichardBurnsRally.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -14,6 +14,6 @@
 <div style="font-family:'Lucida Sans Unicode';font-size:13px;" class="main">
 See this post on the forum:
 <br>
-<a href="http://thecrewchief.org/showthread.php?1851-Richard-Burns-Rally-Crew-Chief-setup-and-known-issues&amp;p=7539">http://thecrewchief.org/showthread.php?1851-Richard-Burns-Rally-Crew-Chief-setup-and-known-issues&amp;p=7539</a></font>
+<a href="https://thecrewchief.org/showthread.php?1851-Richard-Burns-Rally-Crew-Chief-setup-and-known-issues&amp;p=7539">https://thecrewchief.org/showthread.php?1851-Richard-Burns-Rally-Crew-Chief-setup-and-known-issues&amp;p=7539</a></font>
   </body>
 </html>
