--- a/HelpFiles/GettingStarted_GameSpecific_rFactor2.html
+++ b/HelpFiles/GettingStarted_GameSpecific_rFactor2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -33,7 +33,7 @@ Crew Chief supports some rF2 specific features not exposed via official rF2 Inte
 <br>
 Note: first space in <code>" Enabled"</code> above is required.<br>
 <br>
-<a href="http://thecrewchief.org/showthread.php?1011-rFactor-2-Unofficial-Features">See this thread for more information</a>
+<a href="https://thecrewchief.org/showthread.php?1011-rFactor-2-Unofficial-Features">See this thread for more information</a>
 </div>
 
 </body>
