--- a/HelpFiles/GettingStarted_General.html
+++ b/HelpFiles/GettingStarted_General.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -14,7 +14,7 @@
 <h3>Quick start</h3>
 Crew Chief requires the .Net framework, version 4.6. This is included in Windows 10 but Windows 7 and Window 8 users will need to install it.<br>
 <br>
-Download the CrewChiefV4.msi installer <a href="http://thecrewchief.org/forum.php">via the forum</a> and run it.<br>
+Download the CrewChiefV4.msi installer <a href="https://thecrewchief.org/forum.php">via the forum</a> and run it.<br>
 Start the app. Click the <b>Download sound pack</b> button and the <b>Download driver names</b> button to get the latest sounds and driver names. Select a game from the list at the top right. When the sounds and driver names have finished downloading, click the <b>Start Application</b> button. Then fire up the game. Note that the app comes with swearing 'off' by default - if you want to be sworn at you need to enable this in the Properties UI.<br>
 <br>
 For Raceroom, iRacing and Project Cars, Crew Chief is self contained and needs no other software and almost no configuration. For rFactor 1 based games, rFactor 2 and Assetto Corsa there are a couple of extra steps required.<br>
