--- a/HelpFiles/VoiceRecognition_InstallationTraining.html
+++ b/HelpFiles/VoiceRecognition_InstallationTraining.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -136,7 +136,7 @@
           src="VoiceRecognition_InstallationTraining.png" alt="Control
           Panel"> </a> <br>
       If it's still not working read the words of wisdom in the <a
-href="http://thecrewchief.org/showthread.php?28-F-a-q&amp;p=3238&amp;viewfull=1#post3238">FAQ</a>.<br>
+href="https://thecrewchief.org/showthread.php?28-F-a-q&amp;p=3238&amp;viewfull=1#post3238">FAQ</a>.<br>
     </div>
   </body>
 </html>
