--- a/HelpFiles/index.html
+++ b/HelpFiles/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -17,7 +17,7 @@
           alt="" style="width:572px !important;height:100px !important;"
           width="161" height="39"></p>
       Crew Chief is a team radio engineer, originally developed by <b><a
-          href="http://thecrewchief.org/member.php?2-mr_belowski">Mr
+          href="https://thecrewchief.org/member.php?2-mr_belowski">Mr
           Belowski</a></b>.&nbsp; It also has a spotter with a choice of
       voices.<br>
       <br>
@@ -94,7 +94,7 @@
       <br>
       <h4>Installing</h4>
       The CrewChiefV4 installer can be found <a
-        href="http://thecrewchief.org/forum.php">via the forum</a>. <br>
+        href="https://thecrewchief.org/forum.php">via the forum</a>. <br>
       <br>
       There is an <b>Android </b>version for Project Cars 1and 2 on <a
 href="https://play.google.com/store/apps/details?id=com.britton_it_ltd.crewchief.full&amp;gl=GB">Google
@@ -104,7 +104,7 @@ href="https://play.google.com/store/apps/details?id=com.britton_it_ltd.crewchief
         Play</a><br>
       <br>
       If you're not familiar with Crew Chief, check out these <a
-        href="http://thecrewchief.org/forumdisplay.php?22-Crew-Chief-videos">videos</a>.<br>
+        href="https://thecrewchief.org/forumdisplay.php?22-Crew-Chief-videos">videos</a>.<br>
     </div>
   </body>
 </html>
