--- a/HelpFiles/menu.html
+++ b/HelpFiles/menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -261,7 +261,7 @@
       <tbody>
         <tr>
           <td width="20%" valign="top"><a
-              href="http://thecrewchief.org/forum.php">Crew Chief Forum</a><br>
+              href="https://thecrewchief.org/forum.php">Crew Chief Forum</a><br>
           </td>
           <td valign="top"><br>
           </td>
