--- a/HelpFiles/About_Customising_NameRequests.html
+++ b/HelpFiles/About_Customising_NameRequests.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -20,14 +20,14 @@
       a major piece of work.<br>
       <br>
       If none of the 750 work for you first <a
-href="http://thecrewchief.org/showthread.php?351-Full-list-of-all-My-Name-entries-(-quot-Personalisations-quot-)">check</a>
+href="https://thecrewchief.org/showthread.php?351-Full-list-of-all-My-Name-entries-(-quot-Personalisations-quot-)">check</a>
       whether your name or something close to is not already in CC then
       check whether one of near 8000 <a
-href="http://thecrewchief.org/showthread.php?1705-Personalisations-an-experiment">"stub"
+href="https://thecrewchief.org/showthread.php?1705-Personalisations-an-experiment">"stub"
         versions</a> is OK and if not read <a
-href="http://thecrewchief.org/showthread.php?491-New-personalisation-requests">Jim's
+href="https://thecrewchief.org/showthread.php?491-New-personalisation-requests">Jim's
         note</a>, only then add your name request to the queue in the <a
-href="http://thecrewchief.org/forumdisplay.php?7-Names-and-personalisations">Crew
+href="https://thecrewchief.org/forumdisplay.php?7-Names-and-personalisations">Crew
         Chief Forum</a>.<br>
       <br>
     </div>
