--- a/HelpFiles/About_Customising_VoicePacks.html
+++ b/HelpFiles/About_Customising_VoicePacks.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -16,7 +16,7 @@ A: Crew Chief is an open source project, we can't stop you from creating a sound
 <br>
 Depending on how different sentence/number formatting is in your language, it might require code changes to the Crew Chief code. Depending on how much work it is we may or may not be able to help.<br>
 <br>
-More in this forum post <a href="http://thecrewchief.org/showthread.php?825-Authoring-alternative-Crew-Chief-voice-packs">Authoring alternative Crew Chief voice packs</a><br>
+More in this forum post <a href="https://thecrewchief.org/showthread.php?825-Authoring-alternative-Crew-Chief-voice-packs">Authoring alternative Crew Chief voice packs</a><br>
 <br>
 </div>
 
