--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -9,6 +9,7 @@
 	<li>Some fixes to the macro editor</li>
 	<li>ACC - fix some pit menu interactions - the app will always assume that the "Strategy" option is show so you'll need to ensure your current setup has at some pit strategies defined</li>
 	<li>R3E - use the tyre temperature ranges sent by the game instead of CC's internal ranges</li>
+	<li>GTR2 - added simple flatspot implementation</li>
 </ul>
 <h2>Version 4.15.2.2</h2>
 <ul>
