--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.15.2.4</h2>
+<ul>
+	<li>Remove references to GoogleDrive in auto-updater data</li>
+	<li>Chat macro fixes</li>
+	<li>iRacing - added Spa Combined, Limerock Classic 2019 and Hockenheim GP corner mappings</li>
+	<li>ACC - added "how many laps on tyre set [x]" voice command (reports the number of laps this tyre set has been used for)</li>
+	<li>ACC - added "[pitstop / box], select best tyres" voice command - uses the tyre usage data to select the least used tyre set in the pit MFD (just in terms of number of laps)</li>
+	<li>ACC - damage threshold tweaks</li>
+	<li>R3E - fix some car class handling bugs when server use rolling start qualifying</li>
+	<li>A few minor bug fixes</li>
+</ul>
 <h2>Version 4.15.2.3</h2>
 <ul>
 	<li>Change all links to thecrewchief.org to use HTTPS</li>
