--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.15.2.5</h2>
+<ul>
+	<li>Hotfix for broken chat macros (sorry it took so long)</li>
+	<li>GTR2 - added windscreen wipers support and wired up formation lap logic</li>
+</ul>
 <h2>Version 4.15.2.4</h2>
 <ul>
 	<li>Remove references to GoogleDrive in auto-updater data</li>
