--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -6,6 +6,7 @@
 	<li>R3E - updated WebHub to latest version with new data</li>
 	<li>iRacing - updated track landmarks data to add more tracks and correct some existing ones (thanks to Jacob Klein for the hard work here)</li>
 	<li>RF2 - pit menu manager improvements</li>
+	<li>GTR2 - VR improvements</li>
 </ul>
 <h2>Version 4.15.2.5</h2>
 <ul>
