--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
-<body> 
+<body>
+<h2>Version 4.15.2.7</h2>
+<ul>
+	<li>Fix a crash on start up if nAudio devices fail to initialise</li>
+	<li>AMS2 - added some missing content mapping</li>
+	<li>iRacing - added some missing content mapping</li>
+	<li>GTR2 - updated VR plugin and added some additional features</li>
+</ul>
 <h2>Version 4.15.2.6</h2>
 <ul>
 	<li>R3E - updated WebHub to latest version with new data</li>
