--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.15.2.9</h2>
+<ul>
+	<li>Tweaked nAudio WASAPI playback to reduce the likelihood of sounds being truncated</li>
+	<li>fixed chat macro key presses not registering for some games</li>
+	<li>R3E & GTR2 - added dirt pickup warning messages (can be disabled with "Enable tyre dirt pickup warnings" property)</li>
+	<li>GTR2 - damage reporting and gearbox improvements</li>
+</ul>
 <h2>Version 4.15.2.7</h2>
 <ul>
 	<li>Fix a crash on start up if nAudio devices fail to initialise</li>
