tweaked some AC tyre wear thresholds

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -4,7 +4,7 @@
 <h2>Version 4.15.3.0</h2>
 <ul>
 	<li>Added a sector 3 pit warning when needing fuel</li>
-	<li>Added support for F1 2021 (spotter only)</li>
+	<li>Added support for F1 2021 (spotter only, thanks to Christopher Berger)</li>
 	<li>R3E - work around the game's pit menu changes. The voice command "fix suspension" should work now but note that it will only toggle the value of this option (the app can't know what it's currently set to)</li>
 	<li>GTR2 - update plugin to latest version</li>
 	<li>iRacing - fixed macro key presses</li>
