--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.15.3.5</h2>
+<ul>
+	<li>Fix MS Speech recognition platform download links</li>
+	<li>Use 2 decimal places when reporting tyre pressure in kPa</li>
+	<li>iRacing - prevent autofuel triggering immediately after a driver swap and when the player isn't driving the car (thanks to Jacob Klien and Doug Evenson for helping track this down)</li>
+	<li>GTR2 - plugin update</li>
+	<li>A few minor bug fixes</li>
+</ul>
 <h2>Version 4.15.3.0</h2>
 <ul>
 	<li>Added a sector 3 pit warning when needing fuel</li>
