--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -5,7 +5,7 @@
 <ul>
 	<li>Fix MS Speech recognition platform download links</li>
 	<li>Use 2 decimal places when reporting tyre pressure in kPa</li>
-	<li>iRacing - prevent autofuel triggering immediately after a driver swap and when the player isn't driving the car (thanks to Jacob Klien and Doug Evenson for helping track this down)</li>
+	<li>iRacing - prevent autofuel triggering immediately after a driver swap and when the player isn't driving the car (thanks to Jacob Klein and Doug Evenson for helping track this down)</li>
 	<li>GTR2 - plugin update</li>
 	<li>A few minor bug fixes</li>
 </ul>
