Add RF2 changes

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -7,6 +7,7 @@
 	<li>Use 2 decimal places when reporting tyre pressure in kPa</li>
 	<li>iRacing - prevent autofuel triggering immediately after a driver swap and when the player isn't driving the car (thanks to Jacob Klein and Doug Evenson for helping track this down)</li>
 	<li>GTR2 - plugin update</li>
+	<li>RF2 - Pit Manager: Add F1 tyre compound C1/2/3/4/5. Fix fuel menu parsing.</li>
 	<li>A few minor bug fixes</li>
 </ul>
 <h2>Version 4.15.3.0</h2>
