--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.15.3.6</h2>
+<ul>
+	<li>Revised pit window calculations</li>
+	<li>added a "Speak only when spoken to" option in the Properties screen (when this is enabled the app will only play messages in response to a voice command or button press)</li>
+	<li>various bug fixes</li>
+</ul>
 <h2>Version 4.15.3.5</h2>
 <ul>
 	<li>Fix MS Speech recognition platform download links</li>
