R3E content tweaks and update stuff

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.15.3.7</h2>
+<ul>
+	<li>Content updates for iRacing and R3E</li>
+	<li>GTR2: Minor VR improvements</li>
+	<li>various bug fixes</li>
+</ul>
 <h2>Version 4.15.3.6</h2>
 <ul>
 	<li>Revised pit window calculations</li>
