added missing readme and changelog line

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -5,6 +5,7 @@
 <ul>
 	<li>Optionally block all complaining and negative messages - to implement this we've updated how we handle the "Max complaints per session" variable. This limits the maximum number of times the app can complain at or make a negative comment to the player in a single session. If you're happy to have the app complain when you do badly (by the app's occasionally unattainable standards) then set this to a higher number. If you don't want the app to complain at all set it to 0. The default value of 60 is intended to prevent the app's grumbling from getting tiresome in endurance or very long races</li>
 	<li>Added an option to limit the app's messages to information only ("Disable commentary" property, default false). This setting blocks the app's general 'advice' and encouragement or grumbling messages</li>
+	<li>GTR2 - updated plugin</li>
 </ul>
 <h2>Version 4.15.3.8</h2>
 <ul>
