--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.15.3.11</h2>
+<ul>
+	<li>Allow start and end chat actions to be disabled per macro</li>
+	<li>iRacing - fix for mapping errors when the game doesn't send us a player name</li>
+	<li>R3E - fix GTO pit menu tyre compound selection</li>
+</ul>
 <h2>Version 4.15.3.10</h2>
 <ul>
 	<li>Optionally block all complaining and negative messages - to implement this we've updated how we handle the "Max complaints per session" variable. This limits the maximum number of times the app can complain at or make a negative comment to the player in a single session. If you're happy to have the app complain when you do badly (by the app's occasionally unattainable standards) then set this to a higher number. If you don't want the app to complain at all set it to 0. The default value of 60 is intended to prevent the app's grumbling from getting tiresome in endurance or very long races</li>
