readme and autoupdate stuff

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -6,6 +6,8 @@
 	<li>Allow start and end chat actions to be disabled per macro</li>
 	<li>iRacing - fix for mapping errors when the game doesn't send us a player name</li>
 	<li>R3E - fix GTO pit menu tyre compound selection</li>
+	<li>Rf2 - pit menu refuelling bug fixes</li>
+	<li>AMS2 - added repair pit menu macros</li>
 </ul>
 <h2>Version 4.15.3.10</h2>
 <ul>
