added missing gtr2 plugin update to readme

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -8,6 +8,7 @@
 	<li>R3E - fix GTO pit menu tyre compound selection</li>
 	<li>Rf2 - pit menu refuelling bug fixes</li>
 	<li>AMS2 - added repair pit menu macros</li>
+	<li>GTR2 - plugin update</li>
 </ul>
 <h2>Version 4.15.3.10</h2>
 <ul>
