(Change to trigger appveyor)

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -6,7 +6,7 @@
 	<li>Allow start and end chat actions to be disabled per macro</li>
 	<li>iRacing - fix for mapping errors when the game doesn't send us a player name</li>
 	<li>R3E - fix GTO pit menu tyre compound selection</li>
-	<li>Rf2 - pit menu refuelling bug fixes</li>
+	<li>Rf2 - pit menu "refuel to end": don't refuel if enough already</li>
 	<li>AMS2 - added repair pit menu macros</li>
 	<li>GTR2 - plugin update</li>
 </ul>
