--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
+<h2>Version 4.15.3.12</h2>
+<ul>
+	<li>Suppress "defend your position" type messages when we have a slowdown penalty</li>
+	<li>R3E - fix broken 'request pit' command and a couple of pit menu nagivation issues</li>
+	<li>R3E - added repair all and repair none voice commands ('pitstop fix all' / 'box, fix all' / 'pitstop repair all' / 'box, repair all' and 'pitstop fix none' / 'box, fix none' / 'pitstop repair none' / 'box, repair none')</li>
+</ul>
 <h2>Version 4.15.3.11</h2>
 <ul>
 	<li>Allow start and end chat actions to be disabled per macro</li>
