readme and guid

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+<h2>Version 4.16.0.0</h2>
+<ul>
+	<li>Change target .Net version to 4.7.2. This should have no effect on users, it's required to support new collaborators on the project as the development tooling for the old 4.5 target version is very difficult to find</li>
+	<li>AMS2 - updated to latest shared memory version (includes IMO tyre temps and support for extra lap after timed races)</li>
+	<li>iRacing - added DRS bleeps (enable with the "Enable DRS beeps" property)</li>
+	<li>R3E - fix tyre type mapping for Gr5 cars</li>
+	<li>R3E - fix pit menu nagivation (note that this fix is required to keep up with changes to the game, and the 'fix body work' command is no longer available)</li>
+</ul>
 <h2>Version 4.15.3.12</h2>
 <ul>
 	<li>Suppress "defend your position" type messages when we have a slowdown penalty</li>
