Restore <body> that had been deleted.

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<body>
 <h2>Version 4.16.0.1</h2>
 <ul>
 	<li>Change target Dot Net version to 4.7.2. This should have no effect on users, it's required to support new collaborators on the project as the development tooling for the old 4.5 target version is very difficult to find</li>
