--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.16.0.5</h2>
+<ul>
+	<li>ACC - various improvements to data synchronization and stability work arounds. This should improve the ACC experience significantly</li>
+	<li>AMS2 & R3E - open shared memory with read-access only. This should address some startup issues when using the app with other tools that access the games' shared memory files</li>
+	<li>A few minor bug fixes</li>
+</ul>
 <h2>Version 4.16.0.1</h2>
 <ul>
 	<li>Change target Dot Net version to 4.7.2. This should have no effect on users, it's required to support new collaborators on the project as the development tooling for the old 4.5 target version is very difficult to find</li>
