update for release

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h2>Version 4.16.1.0</h2>
+<h2>Version 4.16.1.1</h2>
 <ul>
 	<li>ACC - various improvements to data synchronization and stability work arounds. This should improve the ACC experience significantly</li>
 	<li>AMS2 & R3E - open shared memory with read-access only. This should address some startup issues when using the app with other tools that access the games' shared memory files</li>
 	<li>GTR2 - plugin update</li>
+	<li>ARCA Sim Racing - added basic support for this game using the existing Rfactor1 plugin and classes</li>
 	<li>A few minor bug fixes</li>
 </ul>
 <h2>Version 4.16.0.1</h2>
