--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.16.1.2</h2>
+<ul>
+	<li>Fix issues launching games</li>
+	<li>ACC - wired up more pre-start messages and some pit window and session transition fixes</li>
+</ul>
 <h2>Version 4.16.1.1</h2>
 <ul>
 	<li>ACC - various improvements to data synchronization and stability work arounds. This should improve the ACC experience significantly</li>
