--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.16.1.3</h2>
+<ul>
+	<li>Clear fuel data in race session when starting from the pit lane (should prevent unrealistic fuel consumption figures in such circumstances)</li>
+	<li>ACC - improved session restart detection</li>
+	<li>ACC - fix cut tracks playing after an invalidated out lap</li>
+	<li>ACC - recalculate car to follow and grid side at the start of double-file formation if drivers have dropped out</li>
+	<li>ACC - derive the pit window start and end times from the total pit window length, rather than the game-provided start and end times (should fix the incorrect window calls). Note that this may result in incorrect pit window calls if you enter a race session some time after the race has started</li>
+</ul>
 <h2>Version 4.16.1.2</h2>
 <ul>
 	<li>Fix issues launching games</li>
