--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.16.1.4</h2>
+<ul>
+	<li>Added some additional logging for non-standard property values</li>
+	<li>Fix some incorrect 'opponent approaching' pit exit calls</li>
+	<li>ACC - wait a little longer for stable opponent positions before deriving player grid side and car-to-follow (should fix issues with occasionally incorrect formation lap calls)</li>
+	<li>GTR2 - plugin update</li>
+	<li>A few minor bug fixes</li>
+</ul>
 <h2>Version 4.16.1.3</h2>
 <ul>
 	<li>Clear fuel data in race session when starting from the pit lane (should prevent unrealistic fuel consumption figures in such circumstances)</li>
