Read the Help window height/width from index.html

--- a/HelpFiles/index.html
+++ b/HelpFiles/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -11,137 +11,147 @@
   </head>
   <body vlink="#551A8B" text="#000000" link="#0000EE" bgcolor="#dddddd"
     alink="#EE0000">
-      <div style="font-family:'Lucida Sans Unicode';font-size:13px;"
-           class="main">
-          <p align="center">
-              <img src="engineer_edited_transparent.png"
-                   alt="" style="width:572px !important;height:100px !important;"
-                   width="161" height="39">
-          </p>
-          Crew Chief is a team radio engineer, originally developed by <b>
-              <a href="https://thecrewchief.org/member.php?2-mr_belowski">
-                  Mr
-                  Belowski
-              </a>
-          </b>.&nbsp; It also has a spotter with a choice of
-          voices.<br>
-          <br>
-          It is human-like, highly responsive, and much, much more including
-          voice recognition, (optional) foul language and thousands of
-          driver names.&nbsp; It's free open source software - though
-          donations are appreciated.<br>
-          <br>
-          It works with the following games<br>
-          <br>
-          <table width="600" height="138" cellspacing="2" cellpadding="2"
-                 border="1">
-              <tbody>
-                  <tr>
-                      <td width="60%" valign="top" align="center">Game</td>
-                      <td width="40%" valign="top" align="center">Support Level</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">Assetto Corsa</td>
-                      <td valign="top" align="center">Full</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">Assetto Corsa Competizione</td>
-                      <td valign="top" align="center">Some Features not available</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">Automobilista</td>
-                      <td valign="top" align="center">Full</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">Automobilista 2</td>
-                      <td valign="top" align="center">Full</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">Copa Petrobas de Marcas</td>
-                      <td valign="top" align="center">Full</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">DiRT Rally</td>
-                      <td valign="top" align="center">Full</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">DiRT Rally 2</td>
-                      <td valign="top" align="center">Full</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">F1 2018</td>
-                      <td valign="top" align="center">Spotter Only</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">F1 2019</td>
-                      <td valign="top" align="center">Spotter Only</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">F1 2020</td>
-                      <td valign="top" align="center">Spotter Only</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">F1 2021</td>
-                      <td valign="top" align="center">Spotter Only</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">Formula Truck</td>
-                      <td valign="top" align="center">Full</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">GTR 2</td>
-                      <td valign="top" align="center">Full</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">iRacing</td>
-                      <td valign="top" align="center">Full</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">Project CARS</td>
-                      <td valign="top" align="center">Full</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">Project CARS 2</td>
-                      <td valign="top" align="center">Full</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">Project CARS 3</td>
-                      <td valign="top" align="center">Full</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">RaceRoom</td>
-                      <td valign="top" align="center">Full</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">rFactor</td>
-                      <td valign="top" align="center">Full</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">rFactor 2</td>
-                      <td valign="top" align="center">Full</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">Richard Burns Rally</td>
-                      <td valign="top" align="center">Full</td>
-                  </tr>
-                  <tr>
-                      <td valign="top" align="center">Stock Car Extreme</td>
-                      <td valign="top" align="center">Full</td>
-                  </tr>
-              </tbody>
-          </table>
-          <br>
-          It works with Project Cars 1 and 2 running on <b>Xbox </b>and <b>PS4</b>
-          as long as they are connected to the same network.<br>
-          <br>
-          <h4>Installing</h4>
-          The CrewChiefV4 installer can be found <a href="https://thecrewchief.org/forum.php">via the forum</a>. <br>
-          <br>
-          There is an <b>Android </b>version for Project Cars 1and 2 on 
-          <a href="https://play.google.com/store/apps/details?id=com.britton_it_ltd.crewchief.full&amp;gl=GB">Google Play</a>
-          <br>
-          <br>
-          If you're not familiar with Crew Chief, check out these <a href="https://thecrewchief.org/forumdisplay.php?22-Crew-Chief-videos">videos</a>.<br>
-      </div>
+    <div style="font-family:'Lucida Sans Unicode';font-size:13px;"
+      class="main">
+      <!--menu window height=634-->
+      <!--menu window width=922-->
+      <p align="center"> <img src="engineer_edited_transparent.png"
+          alt="" style="width:572px !important;height:100px !important;"
+          width="161" height="39"> </p>
+      Crew Chief is a team radio engineer, originally developed by <b>
+        <a href="https://thecrewchief.org/member.php?2-mr_belowski"> Mr
+          Belowski</a></b>.&nbsp; It also has a spotter with a
+      choice of voices.<br>
+      <br>
+      It is human-like, highly responsive, and much, much more including
+      voice recognition, (optional) foul language and thousands of
+      driver names.&nbsp; It's free open source software - though
+      donations are appreciated.<br>
+      <br>
+      It works with the following games:<br>
+      <br>
+      <table width="600" height="138" cellspacing="2" cellpadding="2"
+        border="1">
+        <tbody>
+          <tr>
+            <td width="60%" valign="top" align="center"><font size="+1"
+                color="#cc9933"><i><b>Game</b></i></font></td>
+            <td width="40%" valign="top" align="center"><font size="+1"
+                color="#cc9933"><b><i>Support Level</i></b></font></td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">ARCA Sim Racing</td>
+            <td valign="top" align="center">Full</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">Assetto Corsa</td>
+            <td valign="top" align="center">Full</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">Assetto Corsa Competizione</td>
+            <td valign="top" align="center">Some features not available</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">Automobilista</td>
+            <td valign="top" align="center">Full</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">Automobilista 2</td>
+            <td valign="top" align="center">Full</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">Copa Petrobas de Marcas</td>
+            <td valign="top" align="center">Full</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">DiRT Rally</td>
+            <td valign="top" align="center">Full</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">DiRT Rally 2</td>
+            <td valign="top" align="center">Full</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">F1 2018</td>
+            <td valign="top" align="center">Spotter Only</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">F1 2019</td>
+            <td valign="top" align="center">Spotter Only</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">F1 2020</td>
+            <td valign="top" align="center">Spotter Only</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">F1 2021</td>
+            <td valign="top" align="center">Spotter Only</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">Formula Truck</td>
+            <td valign="top" align="center">Full</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">GTR 2</td>
+            <td valign="top" align="center">Full</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">iRacing</td>
+            <td valign="top" align="center">Full</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">Project CARS</td>
+            <td valign="top" align="center">Full</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">Project CARS 2</td>
+            <td valign="top" align="center">Full</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">Project CARS 3</td>
+            <td valign="top" align="center">Full</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">RaceRoom Racing Experience</td>
+            <td valign="top" align="center">Full</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">rFactor</td>
+            <td valign="top" align="center">Full</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">rFactor 2</td>
+            <td valign="top" align="center">Full</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">Richard Burns Rally</td>
+            <td valign="top" align="center">Full</td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">Stock Car Extreme</td>
+            <td valign="top" align="center">Full</td>
+          </tr>
+        </tbody>
+      </table>
+      <br>
+      It works with Project Cars and Automobilista 2 running on <b>Xbox
+      </b>and <b>PS4</b> as long as they are connected to the same
+      network.<br>
+      <br>
+      <h4>Installing</h4>
+      The CrewChiefV4 installer can be found <a
+        href="https://thecrewchief.org/forum.php">via the forum</a>.
+      Once installed Crew Chief will offer to update itself when there
+      is a new version but if that fails download the installer (which
+      will be the latest version) and run it.<br>
+      <br>
+      There is an <b>Android </b>version for Project Cars and
+      Automobilista 2 on <a
+href="https://play.google.com/store/apps/details?id=com.britton_it_ltd.crewchief.full&amp;gl=GB">Google
+        Play</a> <br>
+      <br>
+      If you're not familiar with Crew Chief, check out these <a
+        href="https://thecrewchief.org/forumdisplay.php?22-Crew-Chief-videos">videos</a>.<br>
+    </div>
   </body>
 </html>
