readme and changelog

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.16.1.5</h2>
+<ul>
+	<li>Some error handling improvements</li>
+	<li>iRacing - clear fuel when we don't actually need any and we're set to auto-fuel</li>
+	<li>GTR2 - plugin update</li>
+	<li>ACC - mapped some of the newer content</li>
+	<li>A few minor bug fixes</li>
+</ul>
 <h2>Version 4.16.1.4</h2>
 <ul>
 	<li>Added some additional logging for non-standard property values</li>
