--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.16.2.2</h2>
+<ul>
+	<li>Fix a potential crash bug in the VR settings initialisation where config files are missing or corrupt</li>
+</ul>
 <h2>Version 4.16.2.1</h2>
 <ul>
 	<li>Added transparency support to VR overlays</li>
