--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.16.2.3</h2>
+<ul>
+	<li>Added an option to insert a pause between sounds ('Pause between sound fragments (ms)' in the Properties screen, units milliseconds). If you find that the app sometimes misses off the start or end of some sounds, try setting this to 50 or 100</li>
+	<li>iRacing - added new car class mappings</li>
+	<li>some internal rework and error handling improvements</li>
+</ul>
 <h2>Version 4.16.2.2</h2>
 <ul>
 	<li>Fix a potential crash bug in the VR settings initialisation where config files are missing or corrupt</li>
