--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.16.2.4</h2>
+<ul>
+	<li>Revised audio device re-indexing to better handle cases where audio devices are changed while the app is running</li>
+	<li>Fix some crash bugs on start up</li>
+	<li>Assorted other minor fixes and tweaks</li>
+	<li>GTR2 - plugin update</li>
+	<li>iRacing - speculative workaround to prevent the app trying to auto-fuel on driver change when it shouldn't</li>
+	<li>AMS2 - marked some tracks of Ovals</li>
+</ul>
 <h2>Version 4.16.2.3</h2>
 <ul>
 	<li>Added an option to insert a pause between sounds ('Pause between sound fragments (ms)' in the Properties screen, units milliseconds). If you find that the app sometimes misses off the start or end of some sounds, try setting this to 50 or 100</li>
