--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -8,7 +8,7 @@
 	<li>Assorted other minor fixes and tweaks</li>
 	<li>GTR2 - plugin update</li>
 	<li>iRacing - speculative workaround to prevent the app trying to auto-fuel on driver change when it shouldn't</li>
-	<li>AMS2 - marked some tracks of Ovals</li>
+	<li>AMS2 - marked some tracks as Ovals</li>
 </ul>
 <h2>Version 4.16.2.3</h2>
 <ul>
