Toich change_log_for_auto_updated.html

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -3,7 +3,7 @@
 <body>
 <h2>Version 4.16.2.6</h2>
 <ul>
-	<li>Added 'listen if not pressed' as a speech recognition mode - the app will always listen for voice commands unless the assigned button is held down (useful for cases where that button activates some other program's voice input)</li>
+	<li>Added 'Listen if not pressed' as a speech recognition mode - the app will always listen for voice commands unless the assigned button is held down (useful for cases where that button activates some other program's voice input)</li>
 	<li>iRacing - fix the app not working with electric vehicles. Note that there's more work still to do here, the existing CC support for electric vehicles makes some assumptions about charging / vehicle swap rules that may not apply</li>
 </ul>
 <h2>Version 4.16.2.5</h2>
