--- a/HelpFiles/Speech_PaceNotes.html
+++ b/HelpFiles/Speech_PaceNotes.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -30,7 +30,7 @@ Doing this creates a set of .wav files and a metadata.json file which contains s
 If there are pace notes for the game / car / track combination you're using in your Documents folder, you can start this running with the voice command "start pace notes" and stop it with the voice command "stop pace notes", or you can assign a button to the "Start / stop playing pace notes" action. When the pace notes are being played, each of the messages in the session will be played when you reach the point on the track where it was recorded. They will continue to be played until you press the button again or make the "stop pace notes" voice command.<br>
 <br>
 <br>
-There's a sample pace notes set available for Raceroom's Macau circuit in the WTCC 2014 - 2017 cars. You can view it in action on <a href="https://youtu.be/hz7lu23ckUE">YouTube</a>. You can download it here <a href="http://crewchief.isnais.de/ExamplePaceNotes.zip">http://crewchief.isnais.de/ExamplePaceNotes.zip</a>. Unzip this to your Documents folder so it creates a directory structure like the ones described above, then when you start a WTCC session at Macau you can start the pace notes playing with the "start pace notes" voice command or "Start / stop playing pace notes" button.<br>
+There's a sample pace notes set available for Raceroom's Macau circuit in the WTCC 2014 - 2017 cars. You can view it in action on <a href="https://youtu.be/hz7lu23ckUE">YouTube</a>. You can download it here <a href="https://d1o4ya81faadx8.cloudfront.net/ExamplePaceNotes.zip">https://d1o4ya81faadx8.cloudfront.net/ExamplePaceNotes.zip</a>. Unzip this to your Documents folder so it creates a directory structure like the ones described above, then when you start a WTCC session at Macau you can start the pace notes playing with the "start pace notes" voice command or "Start / stop playing pace notes" button.<br>
 <br>
 </div>
 
